--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gulp-clean-css": "^4.3.0",
     "gulp-cli": "^2.2.0",
     "gulp-rename": "^2.0.0",
-    "gulp-sass": "^4.0.2"
+    "gulp-sass": "^4.0.2",
+    "gulp-sourcemap": "^1.0.1"
   }
 }
