--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^4.0.2",
     "gulp-sourcemap": "^1.0.1"
+  },
+  "dependencies": {
+    "tiny-slider": "^2.9.2"
   }
 }
